tests/error/misc_errors/callable_no_args.err
Error: Invalid type (at $FILE:6:11)
  | 
4 | 
5 | @guppy.declare
6 | def foo(f: Fn) -> None: ...
  |            ^^ Invalid function type

Help: Function types are specified as follows: `Fn[[<arguments>], <return
type>]`

Guppy compilation failed due to 1 previous error
